unpackaged/objects/SBU_Information__c.object
<CustomObject>
  <description>Information about SBUs</description>
  <fields>
    <fullName>Account_Strategy_Comments__c</fullName>
    <label>Account Strategy Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Account_Strategy_High_Potential__c</fullName>
    <label>Account Strategy - High Potential</label>
    <length>2000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Account_Strategy_Low_Potential__c</fullName>
    <label>Account Strategy - Low Potential</label>
    <length>3000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Account_Strategy_Medium_Potential__c</fullName>
    <label>Account Strategy - Medium Potential</label>
    <length>3000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Assumed_CRM_Data_Quality__c</fullName>
    <label>Assumed CRM Data Quality</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Very Good</fullName>
        </value>
        <value>
          <fullName>Good</fullName>
        </value>
        <value>
          <fullName>Quiete Good</fullName>
        </value>
        <value>
          <fullName>Not Good</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Assumed_Legacy_System_Data_Quality__c</fullName>
    <label>Assumed Legacy System Data Quality</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Very Good</fullName>
        </value>
        <value>
          <fullName>Good</fullName>
        </value>
        <value>
          <fullName>Quiete Good</fullName>
        </value>
        <value>
          <fullName>Not Good</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CRM_Description__c</fullName>
    <label>CRM Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Dentsply</fullName>
          <default>true</default>
          <label>Dentsply</label>
        </value>
        <value>
          <fullName>Sirona</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>SBUs_Description</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Hardware_Device_Status__c</fullName>
    <label>Hardware Device Status</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Legacy_System_Description__c</fullName>
    <label>Legacy System Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Market_Access_Modality__c</fullName>
    <label>Market Access Modality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>E-commerce</fullName>
        </value>
        <value>
          <fullName>Call Center</fullName>
        </value>
        <value>
          <fullName>Sales Reps</fullName>
        </value>
        <value>
          <fullName>Distributors</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Notes_about_users__c</fullName>
    <label>Notes about #users</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>ONE_SFDC_Marketing_Modules__c</fullName>
    <label>ONE SFDC Marketing Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>ONE_SFDC_Marketing_Modules</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>ONE_SFDC_Marketing_Platform__c</fullName>
    <label>ONE SFDC Marketing Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>ONE_SFDC_Marketing_Platform</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>ONE_SFDC_Sales_Modules__c</fullName>
    <label>ONE SFDC Sales Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>ONE_SFDC_Sales_Modules</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>ONE_SFDC_Sales_Platform__c</fullName>
    <label>ONE SFDC Sales Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>ONE_SFDC_Sales_Platform</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>RCO_SBU_Specific__c</fullName>
    <label>RCO/SBU Specific</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>RCO_SBU_Specific</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>SBU_Account_Business_Rules__c</fullName>
    <label>Account Business Rules</label>
    <length>5000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>SBU_CFE_Business_Rules__c</fullName>
    <label>CFE Business Rules</label>
    <length>5000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>SBU_CRM_System__c</fullName>
    <label>SBU CRM System</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SBU_Contact_Business_Rules__c</fullName>
    <label>Contact Business Rules</label>
    <length>5000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>SBU_Legacy_ERP_System__c</fullName>
    <label>SBU Legacy ERP System</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SBU_Network_Business_Rules__c</fullName>
    <label>Network Business Rules</label>
    <length>5000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>SBU_Users_Active_formula__c</fullName>
    <formula>if( Users_Active__c =True, "Yes","No")</formula>
    <label>SBU Users Active</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>CAD\CAM</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Healthcare</fullName>
        </value>
        <value>
          <fullName>Imaging</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Instruments</fullName>
        </value>
        <value>
          <fullName>MANT</fullName>
          <isActive>false</isActive>
          <label>MANT</label>
        </value>
        <value>
          <fullName>Ortho</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Technologies</fullName>
          <isActive>false</isActive>
          <label>Technologies</label>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Direct</fullName>
        </value>
        <value>
          <fullName>Indirect</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>User_Total__c</fullName>
    <formula>Users_Sales_Manager__c + Users__c+ users_CRM_Analyst__c + Users_CS__c + Users_MKTG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#User Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Users_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SBU Users Active</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Users_CS__c</fullName>
    <label>#Users CS</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Users_MKTG__c</fullName>
    <label>#Users MKTG</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Users_Sales_Manager__c</fullName>
    <label>#Users Sales Manager</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Users__c</fullName>
    <label>#Users Sales Team</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>implant_sbu__c</fullName>
    <formula>if(includes(SBU__c,"Implants")=True,True,False)</formula>
    <label>implant sbu</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>users_CRM_Analyst__c</fullName>
    <label>#Users CRM Analyst</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>SBU Information</label>
  <nameField>
    <label>SBU Information Id</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>SBUs Information</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>